@@ -46,6 +46,8 @@ Date: 2025-12-07
     - Changed CRT framing to take advanced circuits, rather then processing units.
     - Changed polonium-210 recipe to be in chemical plant, instead of assembler.
     - Took a sledgehammer to the recipes that make polonium-210, to make their ratios actually usable by anything that isnt fuel cells.
+    - Lowered amount of sulfuric used in bastanite seperation from 20 to 15.
+    - Lowered crafting time of bastanite from 18s to 12s, and lowered amount of TM ore it needs.
 
   Fixes:
     - Fixed the tech icons of all battery equipment.
